Fix contrast and event-tab hover

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,7 +32,7 @@ h1 {
 h2 {
     font-size: 32px;
     font-weight: lighter;
-    color: rgb(230, 138, 34);
+    color: rgb(255, 141, 10);
     text-transform: uppercase;
 }
 
@@ -91,7 +91,7 @@ a {
 }
 
 a:hover {
-    color: rgb(230, 138, 34);
+    color: rgb(255, 141, 10);
   }
 
 .banner {
@@ -133,8 +133,8 @@ a:hover {
 }
 
 .start {
-    color:rgb(255, 247, 253);
-    background-color: rgb(230, 138, 34);
+    color:rgb(38, 65, 67);
+    background-color: rgb(255, 141, 10);
     border: none;
     padding: 15px 32px;
     margin: 0;
@@ -200,10 +200,10 @@ h5 {
 }
 
 .event-tab:hover {
-    background-color: rgb(230, 138, 34);
+    background-color: rgb(255, 141, 10);
 }
 
-a .event-tab:hover {
+.read:hover {
     color: rgb(255, 247, 253);
 }
 
@@ -216,6 +216,7 @@ a .event-tab:hover {
 
 .event-tab p {
     font-size: 12px;
+    color: rgb(38, 65, 67);
 }
 
 .small-thumbnail {
@@ -283,7 +284,7 @@ a .event-tab:hover {
 
 .course:hover {
     transform: scale(1.075);
-    background-color: rgb(230, 138, 34);
+    background-color: rgb(255, 141, 10);
 }
 
 .course img {
